[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "rust-strings-cli"
description = "Command-line interface for rust-strings library"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "rust-strings>=0.1.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]
keywords = ["strings", "binary", "cli", "rust-strings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/iddohau/rust-strings-cli"
Repository = "https://github.com/iddohau/rust-strings-cli"
Issues = "https://github.com/iddohau/rust-strings-cli/issues"

[project.scripts]
rust-strings = "rust_strings_cli.__main__:main"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
    "mypy>=1.0.0",
]